Changelog
=========

0.13 - Unreleased
-----------------

* Switched the meaning of ``~`` and ``C`` in status command.
  [fschulze]

0.12 - 2009-04-14
-----------------

* Added support for Mercurial (hg).
  [mj]

* Refactored working copy logic, so it's easier to add support for other
  version control systems.
  [fschulze]

* Added verbose flag to ``checkout`` and ``update`` commands.
  [fschulze]

0.11 - 2009-04-06
-----------------

* Removed the nice os.path.relpath usage, because it's only been introduced
  with Python 2.6.
  [fschulze]

0.10 - 2009-04-06
-----------------

* Added verbose flag to ``status`` command.
  [fschulze]

* Deprecated ``sources-svn`` and ``sources-git`` in favour of just ``sources``
  which allows more flexibility.
  [fschulze]

* Changed ``status`` command to only check known paths and not the whole
  ``sources-dir`` path.
  [fschulze]

* Add possibility to filter packages in ``update`` and ``status`` commands.
  [fschulze]

* Tell the user at the end of the buildout run whether there have been any
  errors during automatic checkout.
  [fschulze]

* Install the ``develop`` script as the first part instead of the last, so it
  can be used to fix problems.
  [fschulze]

0.9 - 2009-03-30
----------------

* When installed as just an egg, then the resulting ``develop`` script can be
  called from anywhere and will try to find the correct ``develop`` script
  from the current working directory and execute it.
  [fschulze]

* Fixed help text formatting.
  [fschulze]

0.8 - 2009-03-25
----------------

* Added authentication support to subversion commands.
  [fschulze]

* Added ``-a`` option to ``checkout`` command to limit matching to the
  packages declared by the ``auto-checkout`` option. If no further argument
  is given, then all the packages from ``auto-checkout`` are processed.
  [fschulze]

0.7 - 2009-03-24
----------------

* Added ``update`` command to ``checkout`` script.
  [fschulze]
